

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingRight="15dp"
    android:paddingEnd="0dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"

    android:layout_marginTop="5dp"
    android:scrollbars="vertical"
    android:isScrollContainer="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@android:color/darker_gray"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textSize="16sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/freeHours"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:text="@string/address"
                android:textColor="#aaaaaa"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="50dp"
                >
                <LinearLayout
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/phone"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#0099cc"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="0.5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:clickable="true">
                    <ImageButton
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:scaleType="fitCenter"
                        android:src="@drawable/write"
                        android:layout_gravity="center_horizontal"
                        android:background="@android:color/transparent"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/write"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#0099cc"/>
                </LinearLayout>
            </LinearLayout>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/photo"
                android:scaleType="centerInside"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="bottom">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toAdmins"

                    android:layout_gravity="center_horizontal"
                    android:textColor="#0099cc"/>

                </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>
